--- a/head.html
+++ b/head.html
@@ -8,5 +8,11 @@
 <body>
     <h1> this is heading</h1>
     <p>this is my first heading</p>
+    <form>
+       name: <input type="text">
+       email:<input type="email">
+       <input type="button" value="click">
+
+    </form>
 </body>
 </html>
